--- a/dauber.html
+++ b/dauber.html
@@ -304,13 +304,11 @@
               2.ペイントマーカーのインク流体バルブ
               <br>
               二つの製品は比較的に容易に入手が可能で、本来は製品を組み合わせる事を想定していない。
-              なので存在しない部分をデジタルファブリケーションという概念を取り入れて、３Dのソフトと３Dプリンターを駆使して、マジックインクのスクリューキャップ部分となる、インクホルダーを作る事で塗布具として成立させている。<br>
-              次に丸芯の直径サイズが50mmのサイズ、初期段階では80mmで作っていたのだが、東京という立地条件では、存分に塗布具の持ち味を発揮できない、なので50mmにサイズ変更した。<br>
-
+              なので存在しない部分を、３Dのソフト（Blender）と３Dプリンター(Ender Pro 3)を駆使して、マジックインクのスクリューキャップ部分となる、インクホルダーを作る事で塗布具として成立させている。<br>
+              丸芯の直径サイズは50mm、初期段階では80mmで作っていたが、東京という立地条件では、存分に塗布具の持ち味を発揮できないので50mmにサイズ変更した。<br>
               直形50mm幅の塗布部分は人造ウールパッドを使用している。
-
-              今のMagicIncを流用する事で落書きをする大雑把な性格にはぴったりな物に仕上がった。<br>
-              つまり手元に現物がない代物を３Dプリンターという簡易的な造形を生成する装置が見事にピシャリと組み合わさった。良い成功例なのだと思う。
+              現在のプロジェクトはMagicIncを流用する事で落書きをする性質にはぴったりな物に仕上がった。<br>
+              つまり手元に現物がない代物を３Dプリンターという簡易的な装置で射出成形でき、現代ではピシャリと組み合わさった。良い成功例なのだと思う。
               2021年の今日はどこの世界に行ってっもMagicInkの補充液とペイントマーカーと３Dプリンターがあれば無から有が産まれる。
               デジタルツールの使い方によっては良い物になる良い一例と捉えてもらえれば幸いだ。
               データは３DのデータとSTL、GCODEは専用の機械に変換すればすぐにでも試作品が入手可能。
