--- a/dauber.html
+++ b/dauber.html
@@ -294,10 +294,9 @@
                     </h1>
             <!--<p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>-->
             <p>
-              <font>DIYとメーカーズムーブメントを通って、Kingsizeに学んだ通り、DIYという工程から造形を形成する方法と手段としてメイカームーブメントというデジタルファブリケーションを駆使する事で、本来組み合わせての使用を目的としていない複数の製品を組み合わせて、Dauberという塗布具のプロジェクトを進めている。<br>
-                補足だが、Dauberとは液体用のバルブを指しているのだが、流体部分の名称を拝借したままプロジェクトの名称として使用している。
-                話が長くなるのでこれ以上は掘り下げないが、何しろ、今回は本題のタイトルにある通りマジックインクという製品。
-              早速だが、知っている人からすると古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物だ、そしてもう一点、流用したのがペイントマーカー。
+              <font>DIYとメーカーズムーブメントを通って、Kingsizeに学んだ通り、DIYという工程から造形を形成する方法と手段としてデジタルファブリケーションを駆使する事で、本来組み合わせての使用を目的としていない複数の製品を組み合わせて、Dauberという塗布具のプロジェクトを進めている。<br>
+              タイトルにある様にマジックインクという製品。
+              知っている人からすると古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物だ、そしてもう一点、流用したのがペイントマーカ。
               <br>
               1.マジックインクのインク補充容器
               <br>
