--- a/dauber.html
+++ b/dauber.html
@@ -294,16 +294,15 @@
                     </h1>
             <!--<p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>-->
             <p>
-              <font>DIYとメーカーズムーブメントを通って、Kingsizeに学んだ通り、DIYという工程から造形を形成する方法と手段としてデジタルファブリケーションを駆使する事で、本来組み合わせての使用を目的としていない複数の製品を組み合わせて、Dauberという塗布具のプロジェクトを進めている。<br>
-              タイトルにある様にマジックインクという製品。
-              知っている人からすると古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物だ、そしてもう一点、流用したのがペイントマーカ。
-              <br>
+              <font>私はDIYとメーカーズムーブメントを知る事で、Kingsizeから学んだ、DIYという工程から造形を形成する方法と手段としてデジタルファブリケーションを駆使する事は、本来組み合わせての使用を目的としていない複数の製品を組み合わせる事で、Dauberという塗布具のプロジェクトが進んでいる。<br>
+              今回は、タイトルにある様にマジックインクという製品を、私の視点にする事で、安価で手に入る補充液を塗布具として流用した。
+              そして流用した箇所は以下の通りだ。
               1.マジックインクのインク補充容器
               <br>
               2.ペイントマーカーのインク流体バルブ
               <br>
               二つの製品は比較的に容易に入手が可能で、本来は製品を組み合わせる事を想定していない。
-              なので存在しない部分を、３Dのソフト（Blender）と３Dプリンター(Ender Pro 3)を駆使して、マジックインクのスクリューキャップ部分となる、インクホルダーを作る事で塗布具として成立させている。<br>
+              なので存在しない部分を、３Dのソフト（Blender）と３Dプリンター(Ender Pro 3)を駆使して、マジックインクのスクリューキャップ部分となる、インクホルダーを作る事で塗布具としての使用を成立させている。<br>
               丸芯の直径サイズは50mm、初期段階では80mmで作っていたが、東京という立地条件では、存分に塗布具の持ち味を発揮できないので50mmにサイズ変更した。<br>
               直形50mm幅の塗布部分は人造ウールパッドを使用している。
               現在のプロジェクトはMagicIncを流用する事で落書きをする性質にはぴったりな物に仕上がった。<br>
