--- a/dauber.html
+++ b/dauber.html
@@ -143,7 +143,7 @@
             </div>
             <!--target staryt-->
             <div class="row">
-              <div class="col-3"><small>"👀👀👀”</small></div>
+              <div class="col-3"><small>"👀”</small></div>
               <div class="col-5"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Φ50mm MagicInk</a></small></div>
             </div>
             <!--target end-->
