--- a/dauber.html
+++ b/dauber.html
@@ -294,7 +294,7 @@
                     </h1>
             <!--<p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>-->
             <p>
-              <font>私はDIYとメーカーズムーブメントを知る事で、Kingsizeから学んだ、DIYという工程から造形を形成する方法と手段としてデジタルファブリケーションを駆使する事は、本来組み合わせての使用を目的としていない複数の製品を組み合わせる事で、Dauberという塗布具のプロジェクトが進んでいる。<br>
+              <font>私はDIYとメーカーズムーブメントを知る事で、Kingsizeから学んだDIYという工程から造形を形成する方法と手段としてデジタルファブリケーションを駆使する事で、本来は組み合わせての使用を目的としていない複数の製品を組み合わせる事で、Dauberという塗布具のプロジェクトが進んでいる。<br>
               今回は、タイトルにある様にマジックインクという製品を、私の視点にする事で、安価で手に入る補充液を塗布具として流用した。
               そして流用した箇所は以下の通りだ。
               1.マジックインクのインク補充容器
