--- a/dauber.html
+++ b/dauber.html
@@ -294,19 +294,19 @@
                     </h1>
             <!--<p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>-->
             <p>
-              <font>私はDIYとメーカーズムーブメントを知る事で、Kingsizeから学んだDIYという工程から造形を形成する方法と手段としてデジタルファブリケーションを駆使する事で、本来は組み合わせての使用を目的としていない複数の製品を組み合わせる事で、Dauberという塗布具のプロジェクトが進んでいる。<br>
+              <font>私はDIYとメーカーズムーブメントを知る事で、Kingsizeから学んだDIYという工程から、造形を形成する方法と手段として、デジタルファブリケーションを駆使する事で、本来は組み合わせての使用を目的としていない複数の製品を組み合わせる事が可能だと知った、そしてDauberという塗布具のプロジェクトが進んでいる。<br>
               今回は、タイトルにある様にマジックインクという製品を、私の視点にする事で、安価で手に入る補充液を塗布具として流用した。
-              そして流用した箇所は以下の通りだ。
+              流用した箇所は以下の通りだ。
               1.マジックインクのインク補充容器
               <br>
               2.ペイントマーカーのインク流体バルブ
               <br>
-              二つの製品は比較的に容易に入手が可能で、本来は製品を組み合わせる事を想定していない。
-              なので存在しない部分を、３Dのソフト（Blender）と３Dプリンター(Ender Pro 3)を駆使して、マジックインクのスクリューキャップ部分となる、インクホルダーを作る事で塗布具としての使用を成立させている。<br>
+              上記の製品は比較的に容易に入手が可能（海外圏でも・・・）で、本来は製品を組み合わせる事を想定していない為。
+              存在しない部分を、３Dのソフト（Blender）と３Dプリンター(Ender Pro 3)を使用して、マジックインクのスクリューキャップ部分となる、インクホルダーを作る事で塗布具としての使用を成立させている。<br>
               丸芯の直径サイズは50mm、初期段階では80mmで作っていたが、東京という立地条件では、存分に塗布具の持ち味を発揮できないので50mmにサイズ変更した。<br>
-              直形50mm幅の塗布部分は人造ウールパッドを使用している。
-              現在のプロジェクトはMagicIncを流用する事で落書きをする性質にはぴったりな物に仕上がった。<br>
-              つまり手元に現物がない代物を３Dプリンターという簡易的な装置で射出成形でき、現代ではピシャリと組み合わさった。良い成功例なのだと思う。
+              直形50mm幅の塗布部分は<a href="https://www.amazon.co.jp/2%E6%9E%9A%E5%85%A5%E3%82%8A-%E3%83%9D%E3%83%AA%E3%83%83%E3%82%B7%E3%83%A3%E3%83%BC%E7%94%A8-%E3%82%A6%E3%83%BC%E3%83%AB%E3%83%91%E3%83%83%E3%83%89-%E3%83%90%E3%83%95%E7%A0%94%E7%A3%A8-%E7%A0%94%E7%A3%A8%E3%83%91%E3%83%83%E3%83%89/dp/B01NBQWYS4">人造ウールパッド</a>を使用している。
+              現在のプロジェクトはMagicIncを流用する事で落書きをする性質に、ぴったりな物に仕上がった。<br>
+              つまり手元に現物がない代物を３Dプリンターという簡易的な装置で射出成形できるというのは、具体例としての価値を見出せた。
               2021年の今日はどこの世界に行ってっもMagicInkの補充液とペイントマーカーと３Dプリンターがあれば無から有が産まれる。
               デジタルツールの使い方によっては良い物になる良い一例と捉えてもらえれば幸いだ。
               データは３DのデータとSTL、GCODEは専用の機械に変換すればすぐにでも試作品が入手可能。
