--- a/dauber.html
+++ b/dauber.html
@@ -111,7 +111,7 @@
                 <font>Dauber</font>
               </h1>
             <p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>
-            <p><font>2004年スウェーデンのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
+            <p><font>2004年スウェーデンの<a href="http://a5press.net/">A5press</a>からKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
             これは私が知る限りDIYマーカーとその背景について記録された唯一の書籍である。
             DIYマーカーとは、グラフィティを行うライターたちが路上でタギング(サイン)の個性を競う経緯を経て制作されるようになったツールで、
             彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自己制作等を行い、それぞれの自己流マーカーを作るという行為を行ってきた。
