--- a/dauber.html
+++ b/dauber.html
@@ -111,7 +111,7 @@
                 <font>Dauber</font>
               </h1>
             <p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>
-            <p><font>2004年スウェーデンの<a href="http://a5press.net/">A5press</a>からKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
+            <p><font>2004年スウェーデンの<a class="button" href="http://a5press.net/">A5press</a>からKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
             これは私が知る限りDIYマーカーとその背景について記録された唯一の書籍である。
             DIYマーカーとは、グラフィティを行うライターたちが路上でタギング(サイン)の個性を競う経緯を経て制作されるようになったツールで、
             彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自己制作等を行い、それぞれの自己流マーカーを作るという行為を行ってきた。
@@ -304,7 +304,7 @@
               上記の製品は比較的に容易に入手が可能（海外圏でも・・・）で、本来は製品を組み合わせる事を想定していない為。
               存在しない部分を、３Dのソフト（Blender）と３Dプリンター(Ender Pro 3)を使用して、マジックインクのスクリューキャップ部分となる、インクホルダーを作る事で塗布具としての使用を成立させている。<br>
               丸芯の直径サイズは50mm、初期段階では80mmで作っていたが、東京という立地条件では、存分に塗布具の持ち味を発揮できないので50mmにサイズ変更した。<br>
-              直形50mm幅の塗布部分は<a href="https://www.amazon.co.jp/2%E6%9E%9A%E5%85%A5%E3%82%8A-%E3%83%9D%E3%83%AA%E3%83%83%E3%82%B7%E3%83%A3%E3%83%BC%E7%94%A8-%E3%82%A6%E3%83%BC%E3%83%AB%E3%83%91%E3%83%83%E3%83%89-%E3%83%90%E3%83%95%E7%A0%94%E7%A3%A8-%E7%A0%94%E7%A3%A8%E3%83%91%E3%83%83%E3%83%89/dp/B01NBQWYS4">人造ウールパッド</a>を使用している。
+              直形50mm幅の塗布部分は<a class="button" href="https://www.amazon.co.jp/2%E6%9E%9A%E5%85%A5%E3%82%8A-%E3%83%9D%E3%83%AA%E3%83%83%E3%82%B7%E3%83%A3%E3%83%BC%E7%94%A8-%E3%82%A6%E3%83%BC%E3%83%AB%E3%83%91%E3%83%83%E3%83%89-%E3%83%90%E3%83%95%E7%A0%94%E7%A3%A8-%E7%A0%94%E7%A3%A8%E3%83%91%E3%83%83%E3%83%89/dp/B01NBQWYS4">人造ウールパッド</a>を使用している。
               現在のプロジェクトはMagicIncを流用する事で落書きをする性質に、ぴったりな物に仕上がった。<br>
               つまり手元に現物がない代物を３Dプリンターという簡易的な装置で射出成形できるというのは、具体例としての価値を見出せた。
               2021年の今日はどこの世界に行ってっもMagicInkの補充液とペイントマーカーと３Dプリンターがあれば無から有が産まれる。
