--- a/dauber.html
+++ b/dauber.html
@@ -294,7 +294,7 @@
                     </h1>
             <!--<p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>-->
             <p>
-              <font>私はDIYとメーカーズムーブメントを知る事で、Kingsizeから学んだDIYという工程、メーカーズムーブメントからは造形を形成する方法と手段として、デジタルファブリケーションを駆使する事で、本来は組み合わせての使用を目的としていない複数の製品を組み合わせる事が可能だと知った。<br>
+              <font>私はDIYとメーカーズムーブメントを知る事で、Kingsizeから学んだDIYという工程、そしてメーカーズムーブメントからは造形を形成する方法と手段として、デジタルファブリケーションを駆使する事で、本来は組み合わせての使用を目的としていない複数の製品を組み合わせる事が可能だと知った。<br>
               今回は、タイトルにある様にマジックインクという製品を、私の視点にする事で、安価で手に入る補充液を塗布具として流用した。<br>
               流用した箇所は以下の通りだ。<br>
               1.マジックインクのインク補充容器
@@ -303,15 +303,13 @@
               <br>
               上記の製品は比較的に容易に入手が可能（海外圏でも・・・）で、本来は製品を組み合わせる事を想定していない為、
               存在しない部分を、３Dのソフト（Blender）と３Dプリンター(Ender Pro 3)を使用して、マジックインクのスクリューキャップ部分となる、インクホルダーを作る事で塗布具としての使用を成立させている。<br>
-              丸芯の直径サイズは50mm、初期段階では80mmで作っていたが、東京という立地条件では、存分に塗布具の持ち味を発揮できないので50mmにサイズ変更した。<br>
+              丸芯の直径サイズは50mm、初期段階では80mmで作っていたが、東京という立地条件では、存分に塗布具の持ち味を発揮できないので50mmに直径を変更した。<br>
               直形50mm幅の塗布部分は<a class="button" href="https://www.amazon.co.jp/2%E6%9E%9A%E5%85%A5%E3%82%8A-%E3%83%9D%E3%83%AA%E3%83%83%E3%82%B7%E3%83%A3%E3%83%BC%E7%94%A8-%E3%82%A6%E3%83%BC%E3%83%AB%E3%83%91%E3%83%83%E3%83%89-%E3%83%90%E3%83%95%E7%A0%94%E7%A3%A8-%E7%A0%94%E7%A3%A8%E3%83%91%E3%83%83%E3%83%89/dp/B01NBQWYS4">人造ウールパッド</a>を使用している。<br>
-              現在のプロジェクトはMagicIncを流用する事で落書きをする性質に、ぴったりな物に仕上がった。<br>
-              つまり手元に現物がない代物を３Dプリンターという簡易的な装置で射出成形できるというのは、具体例としての価値を見出せた。<br>
-              2021年の今日はどこの世界に行ってっもMagicInkの補充液とペイントマーカーと３Dプリンターがあれば無から有が産まれる。<br>
-              デジタルツールの使い方によっては良い物になる良い一例と捉えてもらえれば幸いだ。<br>
+              現在のプロジェクトはMagicIncを流用する事で街に特化した性質になり、MagicInkの特性を存分に発揮できる代物になった。<br>
+              つまり、手元に現物がない代物を３Dプリンターという簡易的な装置で射出成形でき、本来金型から成形する作業工程を中抜きする事で従来できなかった事を試作段階で実証できる結果となり、フィラメントによる対候性や材質を考慮する事で素材を活かす事ができるという事を発見できた。<br>
+              つまり2021年の今日はどこの世界に行ってもMagicInkの補充液とペイントマーカーと３Dプリンターを活用する事で、本来意図しなかった視点を獲得する事がかなったのである。<br>
+              デジタルツールの使い方によっては良い物になる一例と捉えてもらえれば幸いだ。<br>
               データは３DのデータとSTL、GCODEは専用の機械に変換すればすぐにでも試作品が入手可能。<br>
-
-
               </font>
             </p>
           </div>
