--- a/dauber.html
+++ b/dauber.html
@@ -303,7 +303,7 @@
               <br>
               上記の製品は比較的に容易に入手が可能（海外圏でも・・・）で、本来は製品を組み合わせる事を想定していない為、
               存在しない部分を、３Dのソフト（Blender）と３Dプリンター(Ender Pro 3)を使用して、マジックインクのスクリューキャップ部分となる、インクホルダーを作る事で塗布具としての使用を成立させている。<br>
-              丸芯の直径サイズは50mm、初期段階では80mmで作っていたが、東京という立地条件では、存分に塗布具の持ち味を発揮できないので50mmに直径を変更した。<br>
+              丸芯の直径サイズは50mm、初期段階では80mmで作っていたが、東京という立地条件では、存分に塗布具の持ち味を発揮できない。なので50mmに直径を変更した。<br>
               直形50mm幅の塗布部分は<a class="button" href="https://www.amazon.co.jp/2%E6%9E%9A%E5%85%A5%E3%82%8A-%E3%83%9D%E3%83%AA%E3%83%83%E3%82%B7%E3%83%A3%E3%83%BC%E7%94%A8-%E3%82%A6%E3%83%BC%E3%83%AB%E3%83%91%E3%83%83%E3%83%89-%E3%83%90%E3%83%95%E7%A0%94%E7%A3%A8-%E7%A0%94%E7%A3%A8%E3%83%91%E3%83%83%E3%83%89/dp/B01NBQWYS4">人造ウールパッド</a>を使用している。<br>
               現在のプロジェクトはMagicIncを流用する事で街に特化した性質になり、MagicInkの特性を存分に発揮できる代物になった。<br>
               つまり、手元に現物がない代物を３Dプリンターという簡易的な装置で射出成形でき、本来金型から成形する作業工程を中抜きする事で従来できなかった事を試作段階で実証できる結果となり、フィラメントによる対候性や材質を考慮する事で素材を活かす事ができるという事を発見できた。<br>
