--- a/dauber.html
+++ b/dauber.html
@@ -301,7 +301,7 @@
               <br>
               2.ペイントマーカーのインク流体バルブ
               <br>
-              上記の製品は比較的に容易に入手が可能（海外圏でも・・・）で、本来は塗布具として組み合わせる事を想定していない為、
+              上記の製品は比較的に容易に入手が可能（他国でも・・・？）で、本来は塗布具として組み合わせる事を想定していない為、
               存在しない箇所を、３Dのソフト（Blender）と３Dプリンター(Ender Pro 3)を使用して、マジックインクのスクリューキャップとなる、インクホルダーを作る事で塗布具としての使用を成立させている。<br>
               丸芯の直径は50mm、初期段階では80mmで作っていたが、東京という立地条件では、存分に塗布具の持ち味を発揮できない。<br>
               その為、50mm幅に直径を変更した。<br>
