--- a/dauber.html
+++ b/dauber.html
@@ -295,7 +295,7 @@
             <!--<p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>-->
             <p>
               <font>私はDIYとメーカーズムーブメントを知る事で、Kingsizeから学んだDIYという工程、そしてメーカーズムーブメントからは造形を形成する方法と手段として、デジタルファブリケーションを駆使する事で、本来は組み合わせての使用を目的としていない複数の製品を組み合わせる事が可能だと知った。<br>
-              今回は、タイトルにある様にMagicInkという製品を、私の視点にする事で、安価で手に入る補充液を塗布具として流用した。<br>
+              今回は、タイトルにある様にMagicInkという製品を、私の視点で捉える事で、安価で手に入る補充液を塗布具として流用する事を思いついた。<br>
               流用した箇所は以下の通りだ。<br>
               1.マジックインクのインク補充容器
               <br>
