--- a/dauber.html
+++ b/dauber.html
@@ -307,7 +307,7 @@
               その為、50mm幅に直径を変更した。<br>
               直形50mm幅の塗布部分は<a class="button" href="https://www.amazon.co.jp/2%E6%9E%9A%E5%85%A5%E3%82%8A-%E3%83%9D%E3%83%AA%E3%83%83%E3%82%B7%E3%83%A3%E3%83%BC%E7%94%A8-%E3%82%A6%E3%83%BC%E3%83%AB%E3%83%91%E3%83%83%E3%83%89-%E3%83%90%E3%83%95%E7%A0%94%E7%A3%A8-%E7%A0%94%E7%A3%A8%E3%83%91%E3%83%83%E3%83%89/dp/B01NBQWYS4">人造ウールパッド</a>を使用している。<br>
               現在はMagicIncを流用する事で街に特化した塗布具の性質になり、MagicInkの特性を存分に発揮できる代物になった。<br>
-              つまり、手元に現物がない代物を３Dプリンターという簡易的な装置で射出成形でき、本来金型から成形する作業工程を中抜きする事で、個人単位で製作できなかった射出成形をせずに製作でき、３Dプリンター用のフィラメントの対候性や材質を考慮する事で素材を活かす事ができるという事を発見できた。<br>
+              つまり、手元に現物がない代物を３Dプリンターという簡易的な装置で射出成形でき、本来金型から成形する作業工程を中抜きする事で、個人単位で製作できなかった金型を使用せずに製作でき、３Dプリンター用のフィラメントの対候性や材質を考慮する事で素材を活かす事ができるという事を発見できた。<br>
               現代の2021年の今日はどこの世界に行ってもMagicInkの補充液とペイントマーカーと３Dプリンターを活用する事で、本来意図しなかった視点を獲得する事が叶ったのである。<br>
               デジタルツールの使い方によっては良い物になる一例と捉えてもらえれば幸いだ。<br>
               データは３DのデータとSTL、GCODEは専用の機械に変換すればすぐにでも試作品が入手可能。<br>
