--- a/dauber.html
+++ b/dauber.html
@@ -427,6 +427,16 @@
     </div>
   </div>
   <!--end-->
+
+  <!--productNav start-->
+  <div id="main">
+    <div class="container">
+      <div id="productNav_footer" class="col-md-12">
+        <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+      </div>
+    </div>
+  </div>
+  <!--productNav end-->
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
