--- a/dauber.html
+++ b/dauber.html
@@ -425,6 +425,7 @@
     </div>
   </div>
   <!--end-->
+  <div style="padding-top: 20px;" class="col-md-12"></div>
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
