--- a/dauber.html
+++ b/dauber.html
@@ -249,43 +249,51 @@
       </div>
 
     </div>
-    <!--start-->
+    <!--productNav start-->
     <div id="main">
       <div class="container">
-        <div class="col-md-12">
-          <div class="grid_row">
-            <div class="row">
-              <div class="col-1"><small>🗓</small></div>
-              <div class="col-2"><small>年号</small></div>
-              <div class="col-2"><small>月日</small></div>
-              <!--div class="col-2"><small>時間</small></div-->
-              <div class="col-2"><small>製品</small></div>
-              <div class="col-2"><small>備考</small></div>
-            </div>
+        <div id="productNav_footer" class="col-md-12">
+          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+        </div>
+      </div>
+    </div>
+    <!--productNav end-->
+    <!--start-->
+    <div class="container">
+      <div class="col-md-12">
+        <div class="grid_row">
+          <div class="row">
+            <div class="col-1"><small>🗓</small></div>
+            <div class="col-2"><small>年号</small></div>
+            <div class="col-2"><small>月日</small></div>
+            <!--div class="col-2"><small>時間</small></div-->
+            <div class="col-2"><small>製品</small></div>
+            <div class="col-2"><small>備考</small></div>
           </div>
         </div>
-        <!--timeloop start-->
-        <div class="col-md-12">
-          <div class="grid_row">
-            <div class="row toybox">
-              <div class="col-1"><small>🗓</small></div>
-              <div class="col-2"><small>2021</small></div>
-              <div class="col-2"><small>12/23</small></div>
-              <!--div class="col-2"><small>15:00</small></div-->
-              <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample02" role="button" aria-expanded="false" aria-controls="collapseExample02">詳細</a></small></div>
-              <div class="col-2"><small>💡</small></div>
-            </div>
+      </div>
+      <!--timeloop start-->
+      <div class="col-md-12">
+        <div class="grid_row">
+          <div class="row toybox">
+            <div class="col-1"><small>🗓</small></div>
+            <div class="col-2"><small>2021</small></div>
+            <div class="col-2"><small>12/23</small></div>
+            <!--div class="col-2"><small>15:00</small></div-->
+            <div class="col-2"><small><a data-toggle="collapse" href="#collapseExample02" role="button" aria-expanded="false" aria-controls="collapseExample02">詳細</a></small></div>
+            <div class="col-2"><small>💡</small></div>
           </div>
         </div>
-        <!--timeloop end-->
-        <div id="collapseExample02" style="padding-top: 20px;" class="col-md-12 collapse">
-          <div class="col-md-6">
-            <div class="inner cover">
-              <h1 class="cover-heading">
+      </div>
+      <!--timeloop end-->
+      <div id="collapseExample02" style="padding-top: 20px;" class="col-md-12 collapse">
+        <div class="col-md-6">
+          <div class="inner cover">
+            <h1 class="cover-heading">
                       <font>MagicInk</font>
                     </h1>
-              <!--<p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>-->
-              <p>
+            <!--<p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>-->
+            <p>
               <font>私はDIYとメーカーズムーブメントを知る事で、Kingsizeから学んだDIYという工程、そしてメーカーズムーブメントからは造形を形成する方法と手段として、デジタルファブリケーションを駆使する事で、本来は組み合わせての使用を目的としていない複数の製品を組み合わせる事が可能だと知った。<br>
               今回は、タイトルにある様にMagicInkという製品を、私の視点で捉える事で、安価で手に入る補充液を塗布具として流用する事を思いついた。<br>
               流用した箇所は以下の通りだ。<br>
@@ -306,9 +314,9 @@
 
               </font>
             </p>
-            </div>
           </div>
-          <!--text start
+        </div>
+        <!--text start
         <div class="col-md-6">
           <div class="grid_row">
             <div style="border-top: 1px solid" class="row">
@@ -330,7 +338,7 @@
 
         </div>
         text end-->
-          <!--target  collapseExample stary
+        <!--target  collapseExample stary
         <div id="collapseExample" class="col-md-6 collapse">
           <div class="grid_row">
             <div class="row toybox">
@@ -359,7 +367,7 @@
         target  collapseExample -->
 
 
-          <!-- <div class="row toybox">
+        <!-- <div class="row toybox">
                     <div class="col-3 toybox"><small>"R40”</small></div>
                     <div class="col-3 toybox"><small>1:1</small></div>
                     <div class="col-2 toybox"><small>STL</small></div>
@@ -368,35 +376,35 @@
                     </div>
                   </div> -->
 
-          <!--text-->
+        <!--text-->
 
-          <!--collapse start-->
+        <!--collapse start-->
 
-          <div class="col-md-6">
+        <div class="col-md-6">
 
-            <!--carousel-custom-->
+          <!--carousel-custom-->
 
-            <div id="carousel-custom001" class="carousel slide" data-ride="carousel">
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                  <img src="https://i.pinimg.com/originals/00/60/2d/00602d8d05949c2fe71ab61399e650ea.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
-                </div>
+          <div id="carousel-custom001" class="carousel slide" data-ride="carousel">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="https://i.pinimg.com/originals/00/60/2d/00602d8d05949c2fe71ab61399e650ea.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
+            </div>
 
-              <!-- Controls -->
-              <!---->
-              <a class="left carousel-control" href="#carousel-custom001" role="button" data-slide="prev">
-                <!--<span class="fas fa-arrow-left"></span>-->
-              </a>
-              <a class="right carousel-control" href="#carousel-custom001" role="button" data-slide="next">
-                <!--<span class="fas fa-arrow-right"></span>-->
-              </a>
-              <!---->
+            <!-- Controls -->
+            <!---->
+            <a class="left carousel-control" href="#carousel-custom001" role="button" data-slide="prev">
+              <!--<span class="fas fa-arrow-left"></span>-->
+            </a>
+            <a class="right carousel-control" href="#carousel-custom001" role="button" data-slide="next">
+              <!--<span class="fas fa-arrow-right"></span>-->
+            </a>
+            <!---->
 
 
-              <!-- Indicators start-->
-              <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
+            <!-- Indicators start-->
+            <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
                           <li data-target="#carousel-custom" data-slide-to="0" class="active">
                             <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
                           </li>
@@ -407,19 +415,17 @@
                             <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
                           </li>
                         </ol>-->
-              <!--Indicators end-->
-            </div>
-
-            <!--carousel-custom-->
+            <!--Indicators end-->
           </div>
-          <!--collapse end-->
+
+          <!--carousel-custom-->
         </div>
+        <!--collapse end-->
       </div>
     </div>
-    <!--end-->
   </div>
+  <!--end-->
   </div>
-  <div style="padding-top: 20px;" class="col-md-12"></div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
