--- a/dauber.html
+++ b/dauber.html
@@ -249,20 +249,11 @@
       </div>
 
     </div>
-    <!--productNav start-->
-    <div id="main">
-      <div class="container">
-        <div id="productNav_footer" class="col-md-12">
-          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
-        </div>
-      </div>
-    </div>
-    <!--productNav end-->
     <!--start-->
     <div class="container">
       <div class="col-md-12">
         <div class="grid_row">
-          <div class="row">
+          <div style="border-top: 1px solid" class="row">
             <div class="col-1"><small>🗓</small></div>
             <div class="col-2"><small>年号</small></div>
             <div class="col-2"><small>月日</small></div>
