--- a/dauber.html
+++ b/dauber.html
@@ -416,6 +416,15 @@
     </div>
   </div>
   <!--end-->
+  <!--productNav start-->
+  <div id="main">
+    <div class="container">
+      <div style="padding-top: 20px;" class="col-md-12">
+        <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+      </div>
+    </div>
+  </div>
+  <!--productNav end-->
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
