--- a/dauber.html
+++ b/dauber.html
@@ -158,7 +158,7 @@
               <div class="col-3"><small>Date</small></div>
             </div>
             <div class="row ">
-              <div class="col-2 toybox"><small>"R40”</small></div>
+              <div class="col-2 toybox"><small>"Φ50mm”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-3 toybox"><small>Blender</small></div>
               <div class="col-3 toybox">
@@ -166,7 +166,7 @@
               </div>
             </div>
             <div class="row ">
-              <div class="col-2 toybox"><small>"R40”</small></div>
+              <div class="col-2 toybox"><small>"Φ50mm”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-3 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
@@ -174,7 +174,7 @@
               </div>
             </div>
             <div class="row ">
-              <div class="col-2 toybox"><small>"R40”</small></div>
+              <div class="col-2 toybox"><small>"Φ50mm”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-3 toybox"><small>G-code</small></div>
               <div class="col-3 toybox">
@@ -186,7 +186,7 @@
         <!--target  collapseExample -->
 
         <!-- <div class="row toybox">
-              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>"Φ50mm”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
@@ -338,7 +338,7 @@
               <div class="col-2"><small>Date</small></div>
             </div>
             <div class="row ">
-              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>"Φ50mm”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>Blender</small></div>
               <div class="col-3 toybox">
@@ -346,7 +346,7 @@
               </div>
             </div>
             <div class="row toybox">
-              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>"Φ50mm”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
@@ -359,7 +359,7 @@
 
 
         <!-- <div class="row toybox">
-                    <div class="col-3 toybox"><small>"R40”</small></div>
+                    <div class="col-3 toybox"><small>"Φ50mm”</small></div>
                     <div class="col-3 toybox"><small>1:1</small></div>
                     <div class="col-2 toybox"><small>STL</small></div>
                     <div class="col-3 toybox">
