--- a/dauber.html
+++ b/dauber.html
@@ -158,7 +158,7 @@
               <div class="col-3"><small>Date</small></div>
             </div>
             <div class="row ">
-              <div class="col-2 toybox"><small>"Φ50mm”</small></div>
+              <div class="col-2 toybox"><small>"Φ50”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-3 toybox"><small>Blender</small></div>
               <div class="col-3 toybox">
@@ -166,7 +166,7 @@
               </div>
             </div>
             <div class="row ">
-              <div class="col-2 toybox"><small>"Φ50mm”</small></div>
+              <div class="col-2 toybox"><small>"Φ50”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-3 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
@@ -174,7 +174,7 @@
               </div>
             </div>
             <div class="row ">
-              <div class="col-2 toybox"><small>"Φ50mm”</small></div>
+              <div class="col-2 toybox"><small>"Φ50”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-3 toybox"><small>G-code</small></div>
               <div class="col-3 toybox">
