--- a/dauber.html
+++ b/dauber.html
@@ -303,6 +303,9 @@
               デジタルツールの使い方によっては,深く掘るには幅がいる。一例と捉えてもらえれば幸いだ。<br>
               データは３DのデータとSTL、GCODEは専用の機械に変換すればすぐにでも試作品が入手可能。<br>
 
+              2022/01/06 追記<br>
+              MagicInkに修正箇所があったためデータをアップデートしました。
+
               </font>
             </p>
           </div>
