--- a/dauber.html
+++ b/dauber.html
@@ -166,16 +166,16 @@
               </div>
             </div>
             <div class="row ">
-              <div class="col-2 toybox"><small>"Φ50”</small></div>
-              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small></small></div>
+              <div class="col-3 toybox"><small></small></div>
               <div class="col-3 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
                 <a class="button" href="https://drive.google.com/uc?export=download&id=1gL5JgnS4bQYj0dlbpkf1AE8kzywM61f9"><small>”Download”</small></a>
               </div>
             </div>
             <div class="row ">
-              <div class="col-2 toybox"><small>"Φ50”</small></div>
-              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small></small></div>
+              <div class="col-3 toybox"><small></small></div>
               <div class="col-3 toybox"><small>G-code</small></div>
               <div class="col-3 toybox">
                 <a class="button" href="https://drive.google.com/uc?export=download&id=172FzyL6vAerH1JnIfLRRaxklow0Zprxw"><small>”Download”</small></a>
