--- a/dauber.html
+++ b/dauber.html
@@ -285,24 +285,26 @@
                     </h1>
             <!--<p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>-->
             <p>
-              <font>私はDIYとメーカーズムーブメントを知る事で、Kingsizeから学んだDIYという工程、そしてメーカーズムーブメントからは造形を形成する方法と手段として、デジタルファブリケーションを駆使する事で、本来は組み合わせての使用を目的としていない複数の製品を組み合わせる事が可能だと知った。<br>
-              今回は、タイトルにある様にMagicInkという製品を、私の視点で捉える事で、安価で手に入る補充液を塗布具として流用する事を思いついた。<br>
-              流用した箇所は以下の通りだ。<br>
+              <font>私はDIYとメーカーズムーブメントを知る事で、Kingsizeから学んだDIYという工程、そしてメーカーズムーブメントからは造形を形成する方法と手段として、デジタルファブリケーションを駆使する事で、本来は組み合わせての使用を目的としていない複数の製品を組み合わせる事が可能だと知った。
+              今回は、タイトルにある様にMagicInkという製品を、私の視点で捉える事で、安価で手に入る補充液を塗布具として流用する事を思いついた。
+              流用した箇所は以下の通りだ。
+              </font>
               <font>
               1.マジックインクのインク補充容器
               <br>
               2.ペイントマーカーのインク流体バルブ
               <br>
               </font>
-              上記の製品は比較的に容易に入手が可能（他国では・・・？）で、本来は塗布具として組み合わせる事を想定していない為。<br>
-              存在しない箇所を、３Dのソフト（Blender）と３Dプリンター(Ender Pro 3)を使用して、マジックインクのスクリューキャップとなる、インクホルダーを作る事で塗布具としての使用を成立させている。<br>
-              塗布する箇所の幅は直径50mm、初期段階では80mmで作っていたが、東京という立地条件では、存分に塗布具の持ち味を発揮できない。<br>
-              その為、50mm幅に直径を変更した。<br>
-              直形50mm幅の塗布部分は<a class="button" href="https://www.amazon.co.jp/2%E6%9E%9A%E5%85%A5%E3%82%8A-%E3%83%9D%E3%83%AA%E3%83%83%E3%82%B7%E3%83%A3%E3%83%BC%E7%94%A8-%E3%82%A6%E3%83%BC%E3%83%AB%E3%83%91%E3%83%83%E3%83%89-%E3%83%90%E3%83%95%E7%A0%94%E7%A3%A8-%E7%A0%94%E7%A3%A8%E3%83%91%E3%83%83%E3%83%89/dp/B01NBQWYS4">人造ウールパッド</a>を使用している。<br>
-              現在はMagicIncを流用する事で街に特化した塗布具の性質になり、MagicInkの特性を存分に発揮できる代物になった。<br>
-              つまり、手元に現物がない代物を３Dプリンターという簡易的な装置で射出成形でき、本来金型から成形する作業工程を中抜きする事で、個人単位で製作できなかった金型を使用せずに製作でき、３Dプリンター用のフィラメントの対候性や材質を考慮する事で素材を活かす事ができるという事を発見できた。<br>
-              現代の2021年の今日はどこの世界に行ってもMagicInkの補充液とペイントマーカーと３Dプリンターを活用する事で、本来意図しなかった視点を獲得する事が叶ったのである。<br>
-              デジタルツールの使い方によっては,深く掘るには幅がいる。一例と捉えてもらえれば幸いだ。<br>
+              <font>
+              上記の製品は比較的に容易に入手が可能（他国では・・・？）で、本来は塗布具として組み合わせる事を想定していない為。
+              存在しない箇所を、３Dのソフト（Blender）と３Dプリンター(Ender Pro 3)を使用して、マジックインクのスクリューキャップとなる、インクホルダーを作る事で塗布具としての使用を成立させている。
+              塗布する箇所の幅は直径50mm、初期段階では80mmで作っていたが、東京という立地条件では、存分に塗布具の持ち味を発揮できない。
+              その為、50mm幅に直径を変更した。
+              直形50mm幅の塗布部分は<a class="button" href="https://www.amazon.co.jp/2%E6%9E%9A%E5%85%A5%E3%82%8A-%E3%83%9D%E3%83%AA%E3%83%83%E3%82%B7%E3%83%A3%E3%83%BC%E7%94%A8-%E3%82%A6%E3%83%BC%E3%83%AB%E3%83%91%E3%83%83%E3%83%89-%E3%83%90%E3%83%95%E7%A0%94%E7%A3%A8-%E7%A0%94%E7%A3%A8%E3%83%91%E3%83%83%E3%83%89/dp/B01NBQWYS4">人造ウールパッド</a>を使用している。
+              現在はMagicIncを流用する事で街に特化した塗布具の性質になり、MagicInkの特性を存分に発揮できる代物になった。
+              つまり、手元に現物がない代物を３Dプリンターという簡易的な装置で射出成形でき、本来金型から成形する作業工程を中抜きする事で、個人単位で製作できなかった金型を使用せずに製作でき、３Dプリンター用のフィラメントの対候性や材質を考慮する事で素材を活かす事ができるという事を発見できた。
+              現代の2021年の今日はどこの世界に行ってもMagicInkの補充液とペイントマーカーと３Dプリンターを活用する事で、本来意図しなかった視点を獲得する事が叶ったのである。
+              デジタルツールの使い方によっては,深く掘るには幅がいる。一例と捉えてもらえれば幸いだ。
               データは３DのデータとSTL、GCODEは専用の機械に変換すればすぐにでも試作品が入手可能。<br>
 
               2022/01/06 追記<br>
