--- a/dauber.html
+++ b/dauber.html
@@ -287,15 +287,15 @@
             <p>
               <font>私はDIYとメーカーズムーブメントを知る事で、Kingsizeから学んだDIYという工程、そしてメーカーズムーブメントからは造形を形成する方法と手段として、デジタルファブリケーションを駆使する事で、本来は組み合わせての使用を目的としていない複数の製品を組み合わせる事が可能だと知った。
               今回は、タイトルにある様にMagicInkという製品を、私の視点で捉える事で、安価で手に入る補充液を塗布具として流用する事を思いついた。
-              流用した箇所は以下の通りだ。
+              流用した箇所は以下の通りだ。<br>
               </font>
-              <font>
+              <p>
               1.マジックインクのインク補充容器
               <br>
               2.ペイントマーカーのインク流体バルブ
               <br>
-              </font>
-              <font>
+              </p>
+            <font>
               上記の製品は比較的に容易に入手が可能（他国では・・・？）で、本来は塗布具として組み合わせる事を想定していない為。
               存在しない箇所を、３Dのソフト（Blender）と３Dプリンター(Ender Pro 3)を使用して、マジックインクのスクリューキャップとなる、インクホルダーを作る事で塗布具としての使用を成立させている。
               塗布する箇所の幅は直径50mm、初期段階では80mmで作っていたが、東京という立地条件では、存分に塗布具の持ち味を発揮できない。
@@ -310,7 +310,7 @@
               2022/01/06 追記<br>
               MagicInkに修正箇所があったためデータをアップデートしました。
 
-              </font>
+            </font>
             </p>
           </div>
         </div>
