--- a/contact/thanks-page.html
+++ b/contact/thanks-page.html
@@ -57,7 +57,7 @@
 
           <!-- content goes here -->
           <div class="form-area">
-            <form role="form" action="https://docs.google.com/forms/u/2/d/e/1FAIpQLSf2tU3FCb0KWeNMbskNq9zIGKlq9k60cveLlBKx3XUOyW-Eew/formResponse" method="post" id="mG61Hd" target="hidden_iframe" onsubmit="submitted=true;">
+            <form role="form" action="https://docs.google.com/forms/u/2/d/e/1FAIpQLSf2tU3FCb0KWeNMbskNq9zIGKlq9k60cveLlBKx3XUOyW-Eew/formResponse" method="post" id="mG61Hd" target="hidden_iframe">
               <div class="form-group">
                 <input type="text" name="entry.233542546" class="form-control" id="name" placeholder="Name" required>
               </div>
@@ -99,11 +99,11 @@
 
                 if (submitted === true) {
                   form.submit();
-                  window.location = 'thanks.html';
+                  window.location = 'thanks-page.html';
                 }
               });
             </script>
-            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='thanks-page.html';}"></iframe>
+            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
             <!-- content goes here -->
           </div>
         </div>
