--- a/contact/thanks-page.html
+++ b/contact/thanks-page.html
@@ -59,13 +59,13 @@
           <div class="form-area">
             <form role="form" action="https://docs.google.com/forms/u/2/d/e/1FAIpQLSf2tU3FCb0KWeNMbskNq9zIGKlq9k60cveLlBKx3XUOyW-Eew/formResponse" method="post" id="mG61Hd" target="hidden_iframe">
               <div class="form-group">
-                <input type="text" name="entry.233542546" class="form-control" id="name" placeholder="inputName" required>
+                <input type="text" name="entry.233542546" class="form-control" id="Name" placeholder="Name" required>
               </div>
               <div class="form-group">
-                <input type="email" name="entry.1664462797" class="form-control" id="email" placeholder="inputEmail" required>
+                <input type="email" name="entry.1664462797" class="form-control" id="inputEmail" placeholder="inputEmail" required>
               </div>
               <div class="form-group">
-                <textarea name="entry.2108942869" class="form-control" id="message" placeholder="inputMessage" maxlength="140" rows="7"></textarea>
+                <textarea name="entry.2108942869" class="form-control" id="inputMessage" placeholder="Message" maxlength="140" rows="7"></textarea>
                 <span class="help-block">
                   <p id="characterLeft" class="help-block ">Up to 140 characters</p>
                 </span>
@@ -85,38 +85,40 @@
               </div>
             </form>
             <script>
-              const form = document.getElementById('mG61Hd');
-              const submitbtn = document.getElementById('saveImage');
-              const inputName = document.getElementById('inputName');
-              const inputMail = document.getElementById('inputMail');
-              const reg = /^[A-Za-z0-9]{1}[A-Za-z0-9_.-]*@{1}[A-Za-z0-9_.-]{1,}.[A-Za-z0-9]{1,}$/;
-              let submitted = false;
+              window.onload = function () {
+                const form = document.getElementById('mG61Hd');
+                const submitbtn = document.getElementById('saveImage');
+                const inputName = document.getElementById('inputName');
+                const inputMail = document.getElementById('inputMail');
+                const reg = /^[A-Za-z0-9]{1}[A-Za-z0-9_.-]*@{1}[A-Za-z0-9_.-]{1,}.[A-Za-z0-9]{1,}$/;
+                let submitted = false;
 
-              submitbtn.addEventListener('click', function (event) {
-                let message = [];
-                /*入力値チェック*/
-                if (inputName.value == "") {
-                  message.push("氏名が未入力です。");
-                }
+                submitbtn.addEventListener('click', function (event) {
+                  let message = [];
+                  /*入力値チェック*/
+                  if (inputName.value == "") {
+                    message.push("氏名が未入力です。");
+                  }
 
-                if (inputMail.value == "") {
-                  message.push("メールアドレスが未入力です。");
-                } else if (!reg.test(inputMail.value)) {
-                  message.push("メールアドレスの形式が不正です。");
-                }
-                if (Message.length > 0) {
-                  alert(message);
-                  return;
-                }
-                alert('入力チェックOK');
+                  if (inputMail.value == "") {
+                    message.push("メールアドレスが未入力です。");
+                  } else if (!reg.test(inputMail.value)) {
+                    message.push("メールアドレスの形式が不正です。");
+                  }
+                  if (Message.length > 0) {
+                    alert(message);
+                    return;
+                  }
+                  alert('入力チェックOK');
 
-                submitted = true;
+                  submitted = true;
 
-                if (submitted === true) {
-                  form.submit();
-                  window.location = 'thanks-page.html';
-                }
-              });
+                  if (submitted === true) {
+                    form.submit();
+                    window.location = 'thanks-page.html';
+                  }
+                });
+              };
             </script>
             <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
             <!-- content goes here -->
