--- a/contact/thanks-page.html
+++ b/contact/thanks-page.html
@@ -59,7 +59,7 @@
           <div class="form-area">
             <form role="form" action="https://docs.google.com/forms/u/2/d/e/1FAIpQLSf2tU3FCb0KWeNMbskNq9zIGKlq9k60cveLlBKx3XUOyW-Eew/formResponse" method="post" id="mG61Hd" target="hidden_iframe">
               <div class="form-group">
-                <input type="text" name="entry.233542546" class="form-control" id="Name" placeholder="Name" required>
+                <input type="text" name="entry.233542546" class="form-control" id="inputName" placeholder="Name" required>
               </div>
               <div class="form-group">
                 <input type="email" name="entry.1664462797" class="form-control" id="inputEmail" placeholder="inputEmail" required>
