--- a/contact/thanks-page.html
+++ b/contact/thanks-page.html
@@ -62,7 +62,7 @@
                 <input type="text" name="entry.233542546" class="form-control" id="inputName" placeholder="Name" required>
               </div>
               <div class="form-group">
-                <input type="email" name="entry.1664462797" class="form-control" id="inputEmail" placeholder="inputEmail" required>
+                <input type="email" name="entry.1664462797" class="form-control" id="inputEmail" placeholder="Email" required>
               </div>
               <div class="form-group">
                 <textarea name="entry.2108942869" class="form-control" id="inputMessage" placeholder="Message" maxlength="140" rows="7"></textarea>
