--- a/contact/thanks-page.html
+++ b/contact/thanks-page.html
@@ -57,15 +57,15 @@
 
           <!-- content goes here -->
           <div class="form-area">
-            <form role="form" action="https://docs.google.com/forms/u/2/d/e/1FAIpQLSf2tU3FCb0KWeNMbskNq9zIGKlq9k60cveLlBKx3XUOyW-Eew/formResponse" method="post" id="mG61Hd" target="hidden_iframe">
+            <form role="form" action="https://docs.google.com/forms/u/2/d/e/1FAIpQLSf2tU3FCb0KWeNMbskNq9zIGKlq9k60cveLlBKx3XUOyW-Eew/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
               <div class="form-group">
-                <input type="text" name="entry.233542546" class="form-control" id="inputName" placeholder="Name" required>
+                <input type="text" name="entry.233542546" class="form-control" id="name" placeholder="Name" required>
               </div>
               <div class="form-group">
-                <input type="email" name="entry.1664462797" class="form-control" id="inputEmail" placeholder="Email" required>
+                <input type="email" name="entry.1664462797" class="form-control" id="email" placeholder="Email" required>
               </div>
               <div class="form-group">
-                <textarea name="entry.2108942869" class="form-control" id="inputMessage" placeholder="Message" maxlength="140" rows="7"></textarea>
+                <textarea name="entry.2108942869" class="form-control" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
                 <span class="help-block">
                   <p id="characterLeft" class="help-block ">Up to 140 characters</p>
                 </span>
@@ -79,48 +79,13 @@
                     <button type="button" id="delImage" class="btn btn-default btn-hover-red" data-dismiss="modal" role="button">Close</button>
                   </div>
                   <div class="btn-group" role="group">
-                    <button type="button" id="saveImage" class="btn btn-default btn-hover-green" data-action="save" role="button">submit</button>
+                    <button type="submit" id="saveImage" class="btn btn-default btn-hover-green" data-action="save" role="button">submit</button>
                   </div>
                 </div>
               </div>
             </form>
-            <script>
-              window.onload = function () {
-                const form = document.getElementById('mG61Hd');
-                const submitbtn = document.getElementById('saveImage');
-                const inputName = document.getElementById('inputName');
-                const inputMail = document.getElementById('inputMail');
-                const reg = /^[A-Za-z0-9]{1}[A-Za-z0-9_.-]*@{1}[A-Za-z0-9_.-]{1,}.[A-Za-z0-9]{1,}$/;
-                let submitted = false;
-
-                submitbtn.addEventListener('click', function (event) {
-                  let message = [];
-                  /*入力値チェック*/
-                  if (inputName.value == "") {
-                    message.push("氏名が未入力です。");
-                  }
-
-                  if (inputMail.value == "") {
-                    message.push("メールアドレスが未入力です。");
-                  } else if (!reg.test(inputMail.value)) {
-                    message.push("メールアドレスの形式が不正です。");
-                  }
-                  if (Message.length > 0) {
-                    alert(message);
-                    return;
-                  }
-                  alert('入力チェックOK');
-
-                  submitted = true;
-
-                  if (submitted === true) {
-                    form.submit();
-                    window.location = 'thanks-page.html';
-                  }
-                });
-              };
-            </script>
-            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+            <script type="text/javascript">var submitted = false;</script>
+            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='thanks-page.html';}"></iframe>
             <!-- content goes here -->
           </div>
         </div>
