--- a/contact/thanks-page.html
+++ b/contact/thanks-page.html
@@ -59,10 +59,10 @@
           <div class="form-area">
             <form role="form" action="https://docs.google.com/forms/u/2/d/e/1FAIpQLSf2tU3FCb0KWeNMbskNq9zIGKlq9k60cveLlBKx3XUOyW-Eew/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
               <div class="form-group">
-                <input type="text" name="entry.233542546" class="form-control" id="name" placeholder="Name" required>
+                <input type="text" name="entry.233542546" class="form-control" id="inputName" placeholder="Name" required>
               </div>
               <div class="form-group">
-                <input type="email" name="entry.1664462797" class="form-control" id="email" placeholder="Email" required>
+                <input type="email" name="entry.1664462797" class="form-control" id="inputEmail" placeholder="Email" required>
               </div>
               <div class="form-group">
                 <textarea name="entry.2108942869" class="form-control" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
