--- a/dauber_en.html
+++ b/dauber_en.html
@@ -148,12 +148,17 @@
             </div>
             <!--target staryt-->
             <div class="row">
-              <div class="col-2"><small>Product</small></div>
-              <div class="col-5"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">”Magic ink”</a></small></div>
+              <div class="col-3"><small>"👀”</small></div>
+              <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Φ50mm MagicInk</a></small></div>
+            </div>
+            <!--target end-->
+            <!--target staryt-->
+            <div class="row">
+              <div class="col-3"><small>"👀”</small></div>
+              <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample">Φ80mm</a></small></div>
             </div>
             <!--target end-->
           </div>
-
         </div>
         <!--target  collapseExample stary-->
         <div id="collapseExample" class="col-md-6 collapse">
@@ -164,27 +169,54 @@
               <div class="col-3"><small>Date</small></div>
             </div>
             <div class="row ">
-              <div class="col-2 toybox"><small>"R40”</small></div>
+              <div class="col-2 toybox"><small>"Φ50”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-3 toybox"><small>Blender</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1DrEktkGzog38z0WqG1PuF-_L1zw2BdzC"><small>”Download”</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1bCYJkXgaLK7p1_ZlPstrfcQW0mb7FtIg"><small>”Download”</small></a>
               </div>
             </div>
             <div class="row ">
-              <div class="col-2 toybox"><small>"R40”</small></div>
-              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small></small></div>
+              <div class="col-3 toybox"><small></small></div>
               <div class="col-3 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1teXxe6qWTb7fLHLPFZ9TUdE8JbpoZ_4T"><small>”Download”</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1gL5JgnS4bQYj0dlbpkf1AE8kzywM61f9"><small>”Download”</small></a>
               </div>
             </div>
             <div class="row ">
-              <div class="col-2 toybox"><small>"R40”</small></div>
-              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small></small></div>
+              <div class="col-3 toybox"><small></small></div>
               <div class="col-3 toybox"><small>G-code</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1PVPJqS4BOEekwUgLX082Kea0SkcO2n_F"><small>”Download”</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=172FzyL6vAerH1JnIfLRRaxklow0Zprxw"><small>”Download”</small></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--target  collapseExample -->
+        <!--target  collapseExample stary-->
+        <div id="collapseExample2" class="col-md-6 collapse">
+          <div class="grid_row">
+            <div class="row toybox">
+              <div class="col-2"><small>Size</small></div>
+              <div class="col-3 "><small>Scale</small></div>
+              <div class="col-3"><small>Date</small></div>
+            </div>
+            <div class="row ">
+              <div class="col-2 toybox"><small>"Φ80”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-3 toybox"><small>Blender</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1__jSwHJEnBscd_eMmc8vPMcnjmTEkWTl"><small>”Download”</small></a>
+              </div>
+            </div>
+            <div class="row ">
+              <div class="col-2 toybox"><small></small></div>
+              <div class="col-3 toybox"><small></small></div>
+              <div class="col-3 toybox"><small>STL</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1pt25pLXiJvA0hXDC94V3dCK-_dd0o4u6"><small>”Download”</small></a>
               </div>
             </div>
           </div>
