--- a/dauber.html
+++ b/dauber.html
@@ -114,7 +114,7 @@
             <p><font>2004年スウェーデンの<a class="button" href="http://a5press.net/">A5press</a>からKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
             これは私が知る限りDIYマーカーとその背景について記録された唯一の書籍である。
             DIYマーカーとは、グラフィティを行うライターたちが路上でタギング(サイン)の個性を競う経緯を経て制作されるようになったツールで、
-            彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自己制作等を行い、それぞれの自己流マーカーを作るという行為を行ってきた。
+            彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自主制作等を行い、それぞれの自己流マーカーを作るという行為を行ってきた。
             イギリスから生まれ、1970年代に北米を中心に広がりを見せたDIYムーブメント(Do it Yourself運動)と時を同じくしてニューヨークで生まれたグラフィティにとってこうした流れはごく自然なことであった。だがこうした技術や資料は、グラフィティの広がるスピードとは反対に、匿名性やクルー(組織集団)というグラフィティがもつ性質によって、一部の共同体の中でしかシェアされることがなかったため、インターネットが普及する近年まで書籍や情報として全体に共有されることが非常に少なかったと言える。
 
             Kingsizeは、その書籍の名のごとく大きなマーカーを制作する一連の過程といくつかの論述で構成されている。
@@ -334,7 +334,7 @@
               その為、50mm幅に直径を変更した。
               直形50mm幅の塗布部分は<a class="button" href="https://www.amazon.co.jp/2%E6%9E%9A%E5%85%A5%E3%82%8A-%E3%83%9D%E3%83%AA%E3%83%83%E3%82%B7%E3%83%A3%E3%83%BC%E7%94%A8-%E3%82%A6%E3%83%BC%E3%83%AB%E3%83%91%E3%83%83%E3%83%89-%E3%83%90%E3%83%95%E7%A0%94%E7%A3%A8-%E7%A0%94%E7%A3%A8%E3%83%91%E3%83%83%E3%83%89/dp/B01NBQWYS4">人造ウールパッド</a>を使用している。
               現在はMagicIncを流用する事で街に特化した塗布具の性質になり、MagicInkの特性を存分に発揮できる代物になった。
-              つまり、手元に現物がない代物を３Dプリンターという簡易的な装置で射出成形でき、本来金型から成形する作業工程を中抜きする事で、個人単位で製作できなかった金型を使用せずに製作でき、３Dプリンター用のフィラメントの対候性や材質を考慮する事で素材を活かす事ができるという事を発見できた。
+              つまり、手元に現物がない代物を３Dプリンターという簡易的な装置で射出成形でき、本来金型から成形する作業工程を中抜きする事で、自主製作できなかった金型を使用せずに製作でき、３Dプリンター用のフィラメントの対候性や材質を考慮する事で素材を活かす事ができるという事を発見できた。
               現代の2021年の今日はどこの世界に行ってもMagicInkの補充液とペイントマーカーと３Dプリンターを活用する事で、本来意図しなかった視点を獲得する事が叶ったのである。
               デジタルツールの使い方によっては,深く掘るには幅がいる。一例と捉えてもらえれば幸いだ。
               データは３DのデータとSTL、GCODEは専用の機械に変換すればすぐにでも試作品が入手可能。<br>
