--- a/dauber.html
+++ b/dauber.html
@@ -144,7 +144,7 @@
             <!--target staryt-->
             <div class="row">
               <div class="col-2"><small>"👀”</small></div>
-              <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Φ50mm MagicInk</a></small></div>
+              <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Φ50mm</a></small></div>
             </div>
             <!--target end-->
             <!--target staryt-->
