--- a/dauber_en.html
+++ b/dauber_en.html
@@ -149,7 +149,7 @@
             <!--target staryt-->
             <div class="row">
               <div class="col-2"><small>"👀”</small></div>
-              <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Φ50mm MagicInk</a></small></div>
+              <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Φ50mm </a></small></div>
             </div>
             <!--target end-->
             <!--target staryt-->
@@ -174,7 +174,7 @@
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-3 toybox"><small>Blender</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1bCYJkXgaLK7p1_ZlPstrfcQW0mb7FtIg"><small>”Download”</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1N6aS4LB5x5u-omIwEPaDIehf8ohfknR-"><small>”Download”</small></a>
               </div>
             </div>
             <div class="row ">
@@ -182,15 +182,7 @@
               <div class="col-3 toybox"><small></small></div>
               <div class="col-3 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1gL5JgnS4bQYj0dlbpkf1AE8kzywM61f9"><small>”Download”</small></a>
-              </div>
-            </div>
-            <div class="row ">
-              <div class="col-2 toybox"><small></small></div>
-              <div class="col-3 toybox"><small></small></div>
-              <div class="col-3 toybox"><small>G-code</small></div>
-              <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=172FzyL6vAerH1JnIfLRRaxklow0Zprxw"><small>”Download”</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1XKj1RdcnHz7XDeDZq3k2NAnJoopkgdrz"><small>”Download”</small></a>
               </div>
             </div>
           </div>
@@ -203,20 +195,20 @@
               <div class="col-3 "><small>Scale</small></div>
               <div class="col-3"><small>Date</small></div>
             </div>
-            <div class="row">
+            <div class="row ">
               <div class="col-2 toybox"><small>"Φ80”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-3 toybox"><small>Blender</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1-pxtlADYkwdEr9A3LYiIe4mC5mUVlGQM"><small>”Download”</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1ivR9Y6azzccJI3qiqPC_gCgsqx8BQBRH"><small>”Download”</small></a>
               </div>
             </div>
-            <div class="row">
+            <div class="row ">
               <div class="col-2 toybox"><small></small></div>
               <div class="col-3 toybox"><small></small></div>
               <div class="col-3 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1DaZerwtvEqUO0MvxjE6EJfVmqKVJs8kj"><small>”Download”</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1meKsCGkpM0xpD4VFdQzfVa4hzENgtrTl"><small>”Download”</small></a>
               </div>
             </div>
           </div>
