--- a/dauber_en.html
+++ b/dauber_en.html
@@ -146,12 +146,20 @@
               <div class="col-3 toybox"><small>20200701</small></div>
               <div class="col-3 toybox"><small>TOKYO</small></div>
             </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="grid_row">
             <!--target staryt-->
             <div class="row">
               <div class="col-2"><small>"👀”</small></div>
               <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Φ50mm </a></small></div>
             </div>
             <!--target end-->
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="grid_row">
             <!--target staryt-->
             <div class="row">
               <div class="col-2"><small>"👀”</small></div>
