--- a/dauber_en.html
+++ b/dauber_en.html
@@ -152,8 +152,7 @@
             <div class="row">
               <div class="col-2"><small>"👀”</small></div>
               <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Φ50mm </a></small></div>
-            </div>
-            <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample">Φ80mm</a></small>
+              <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample">Φ80mm</a></small></div>
             </div>
             <!--target end-->
           </div>
@@ -187,7 +186,7 @@
         </div>
         <!--target  collapseExample stary-->
         <div id="collapseExample2" class="col-md-6 collapse">
-          <div　 class="grid_row">
+          <div class="grid_row">
             <div class="row toybox">
               <div class="col-2"><small>Size</small></div>
               <div class="col-3 "><small>Scale</small></div>
