--- a/dauber_en.html
+++ b/dauber_en.html
@@ -153,7 +153,11 @@
               <div class="col-2"><small>"👀”</small></div>
               <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Φ50mm </a></small></div>
             </div>
-            <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">Φ80mm</a></small>
+            <!--target end-->
+            <!--target staryt-->
+            <div class="row">
+              <div class="col-2"><small>"👀”</small></div>
+              <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample">Φ80mm</a></small></div>
             </div>
             <!--target end-->
           </div>
