--- a/dauber.html
+++ b/dauber.html
@@ -148,7 +148,7 @@
             </div>
             <!--target  collapseExample stary-->
             <div id="collapseExample" class="collapse">
-              <div class="grid_row">
+              <div class="grid">
                 <div class="row toybox">
                   <div class="col-2"><small>Size</small></div>
                   <div class="col-3 "><small>Scale</small></div>
@@ -181,7 +181,7 @@
             </div>
             <!--target end-->
             <div id="collapseExample2" class="collapse">
-              <div class="grid_row">
+              <div class="grid">
                 <div class="row toybox">
                   <div class="col-2"><small>Size</small></div>
                   <div class="col-3 "><small>Scale</small></div>
